set to 4.3.stable

--- a/.github/workflows/export.yml
+++ b/.github/workflows/export.yml
@@ -55,9 +55,9 @@ jobs:
           echo "TEMPLATES_URL=https://download.tuxfamily.org/godotengine/3.6/Godot_v3.6-stable_export_templates.tpz" >> $GITHUB_ENV
           echo "VERSION=3.6.stable" >> $GITHUB_ENV
         else
-          echo "GODOT_URL=https://download.tuxfamily.org/godotengine/4.4/dev3/Godot_v4.4-dev3_linux.x86_64.zip" >> $GITHUB_ENV
-          echo "TEMPLATES_URL=https://download.tuxfamily.org/godotengine/4.4/dev3/Godot_v4.4-dev3_export_templates.tpz" >> $GITHUB_ENV
-          echo "VERSION=4.4.dev3" >> $GITHUB_ENV
+          echo "GODOT_URL=https://download.tuxfamily.org/godotengine/4.3/Godot_v4.3-stable_linux.x86_64.zip" >> $GITHUB_ENV
+          echo "TEMPLATES_URL=https://download.tuxfamily.org/godotengine/4.3/Godot_v4.3-stable_export_templates.tpz" >> $GITHUB_ENV
+          echo "VERSION=4.3.stable" >> $GITHUB_ENV
         fi
 
     - name: Download Godot Export Templates
